--- a/zadanie-CSS/zadanie7/style.css
+++ b/zadanie-CSS/zadanie7/style.css
@@ -1,7 +1,11 @@
+* {
+    box-sizing: border-box;
+}
+
 body {
     text-align: center;
     color: white;
-    width: 100%;
+    margin: 0;
 }
 
 header {
