--- a/projekt-spa/scss/style.css
+++ b/projekt-spa/scss/style.css
@@ -235,4 +235,9 @@ input[type="checkbox"], input[type="radio"] {
           box-sizing: border-box;
   padding: 0;
 }
+
+* {
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+}
 /*# sourceMappingURL=style.css.map */
