--- a/projekt-spa/scss/utils/_variables.scss
+++ b/projekt-spa/scss/utils/_variables.scss
@@ -2,7 +2,7 @@ $primary-font: 'Roboto', sans-serif;
 $secondary-font: 'Bellota', cursive;
 
 $primary-color: #1ba4ce;
-$socondary-color: #473452;
+$secondary-color: #473452;
 $tetriary-color: #30383b;
 
 $primary-text-color: #888888;
