--- a/projekt-spa/scss/base/_global.scss
+++ b/projekt-spa/scss/base/_global.scss
@@ -1,3 +1,86 @@
 * {
     box-sizing: border-box;
 }
+
+body {
+    font-family: $primary-font;
+}
+
+h1, h2, h3 {
+    font-family: $secondary-font;
+}
+
+h2, h3 {
+    color: $secondary-color;
+}
+
+h1 {
+    font-size: 60px;
+}
+
+h2 {
+    font-size: 42px;
+}   
+
+h3 {
+    font-size: 22px;
+}
+
+p {
+    color: $primary-text-color;
+    line-height: 1.5;
+    font-size: 16px;
+}
+
+button, a {
+    transition: all 0.3s;
+    text-decoration: none;
+    color: inherit;
+}
+
+section {
+    padding: 30px 0;
+
+    .section-header {
+        text-align: center;
+        margin-bottom: 40px;
+
+        p {
+            margin: auto;
+            font-weight: 300;
+        }
+
+        @media all and (min-width: $medium) {
+            p {
+                max-width: 70%;
+            }
+        }
+    }
+}
+
+
+.container {
+    max-width: $small-container;
+    width: $small-container;
+    padding: 0 23px;
+    margin: 0 auto;
+}
+
+
+
+
+@media all and (min-width: $large) {
+    .container{
+        max-width: $large-container;
+    }
+    section {
+        padding: 60px 0;
+    }
+    
+}
+
+@media all and (min-width: $extra-large) {
+    .container{
+        max-width: $extra-large-container;
+    } 
+}
