--- a/projekt-spa/scss/style.css
+++ b/projekt-spa/scss/style.css
@@ -240,4 +240,226 @@ input[type="checkbox"], input[type="radio"] {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
 }
+
+body {
+  font-family: "Roboto", sans-serif;
+}
+
+h1, h2, h3 {
+  font-family: "Bellota", cursive;
+}
+
+h2, h3 {
+  color: #473452;
+}
+
+h1 {
+  font-size: 60px;
+}
+
+h2 {
+  font-size: 42px;
+}
+
+h3 {
+  font-size: 22px;
+}
+
+p {
+  color: #888888;
+  line-height: 1.5;
+  font-size: 16px;
+}
+
+button, a {
+  -webkit-transition: all 0.3s;
+  transition: all 0.3s;
+  text-decoration: none;
+  color: inherit;
+}
+
+section {
+  padding: 30px 0;
+}
+
+section .section-header {
+  text-align: center;
+  margin-bottom: 40px;
+}
+
+section .section-header p {
+  margin: auto;
+  font-weight: 300;
+}
+
+@media all and (min-width: 768px) {
+  section .section-header p {
+    max-width: 70%;
+  }
+}
+
+.container {
+  max-width: 100%;
+  width: 100%;
+  padding: 0 23px;
+  margin: 0 auto;
+}
+
+@media all and (min-width: 992px) {
+  .container {
+    max-width: 960px;
+  }
+  section {
+    padding: 60px 0;
+  }
+}
+
+@media all and (min-width: 1200px) {
+  .container {
+    max-width: 1140px;
+  }
+}
+
+.btn-reserve, .btn-about {
+  border-radius: 30px;
+  border: 0;
+  color: #ffffff;
+  padding: 20px 35px;
+  display: inline-block;
+  text-decoration: none;
+}
+
+.btn-reserve {
+  border-radius: 0;
+  background-color: #1ba4ce;
+  padding: 20px 55px;
+  margin-right: 25px;
+  font-size: 14px;
+}
+
+.btn-watch i {
+  border-radius: 50px;
+}
+
+.btn-about {
+  background-color: #1ba4ce;
+  padding: 20px 45px;
+}
+
+.btn-about:hover {
+  background-color: #30383b;
+}
+
+.main-nav {
+  position: fixed;
+  top: 0;
+  width: 100%;
+  z-index: 9999;
+  background-color: #ffffff;
+  padding: 12px 0 4px 0;
+}
+
+.main-nav .main-nav-holder {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.main-nav .brand {
+  height: 55px;
+  display: inline-block;
+}
+
+.main-nav .brand img {
+  height: 100%;
+}
+
+.main-nav .mobile-hamburger, .main-nav .mobile-close {
+  font-size: 28px;
+  line-height: 50px;
+  cursor: pointer;
+}
+
+.main-nav .mobile-hamburger {
+  color: #1ba4ce;
+}
+
+.main-nav .mobile-close {
+  color: #ffffff;
+  text-align: right;
+  height: 50px;
+}
+
+.main-nav .open-menu-holder {
+  position: fixed;
+  background-color: #1ba4ce;
+  top: 0;
+  right: 0;
+  max-width: 480px;
+  width: 480px;
+  text-align: right;
+  padding: 12px 23px;
+  display: none;
+}
+
+.main-nav .open-menu-holder.open {
+  display: block;
+}
+
+.main-nav .open-menu-holder .menu {
+  list-style: none;
+}
+
+.main-nav .open-menu-holder .menu .menu-item {
+  font-size: 50px;
+  text-transform: uppercase;
+  padding: 20px 0;
+}
+
+.main-nav .open-menu-holder .menu .menu-item a {
+  color: #ffffff;
+}
+
+@media all and (min-width: 992px) {
+  .main-nav .main-nav-holder {
+    -webkit-box-pack: start;
+        -ms-flex-pack: start;
+            justify-content: flex-start;
+  }
+  .main-nav .brand {
+    height: 85px;
+  }
+  .main-nav .mobile-hamburger, .main-nav .mobile-close {
+    display: none;
+  }
+  .main-nav .open-menu-holder {
+    display: block;
+    position: static;
+    background-color: transparent;
+    width: auto;
+    max-width: 100%;
+    padding: 15px 0 0 0;
+    -ms-flex-item-align: start;
+        align-self: flex-start;
+  }
+  .main-nav .open-menu-holder .menu {
+    list-style: none;
+    background-color: #ffffff;
+  }
+  .main-nav .open-menu-holder .menu .menu-item {
+    display: inline-block;
+    margin: 0 20px;
+    font-size: initial;
+    text-transform: uppercase;
+  }
+  .main-nav .open-menu-holder .menu .menu-item a {
+    color: #473452;
+    font-weight: 700;
+  }
+}
 /*# sourceMappingURL=style.css.map */
