--- a/projekt-spa/scss/style.scss
+++ b/projekt-spa/scss/style.scss
@@ -3,5 +3,9 @@
 
 @import 'base/normalize';
 @import 'base/global';
+@import 'components/inputs';
+@import 'components/infoboxes';
 @import 'components/buttons';
 @import 'layout/nav';
+@import 'layout/header';
+@import 'layout/about';
