--- a/projekt-spa/scss/base/_global.scss
+++ b/projekt-spa/scss/base/_global.scss
@@ -4,6 +4,8 @@
 
 body {
     font-family: $primary-font;
+    overflow-x: hidden;
+    overflow-y: scroll;
 }
 
 h1, h2, h3 {
@@ -20,6 +22,7 @@ h1 {
 
 h2 {
     font-size: 42px;
+    font-weight: 700;
 }   
 
 h3 {
