--- a/projekt-spa/scss/components/_buttons.scss
+++ b/projekt-spa/scss/components/_buttons.scss
@@ -11,13 +11,28 @@
     @extend %btn;
     border-radius: 0;
     background-color: $primary-color;
-    padding: 20px 55px;
-    margin-right: 25px;
+    padding: 16px 30px;
+    margin-right: 15px;
     font-size: 14px;
+
+    &:hover {
+        background-color: $tetriary-color;
+    }
 }
 
-.btn-watch i {
-    border-radius: 50px;
+.btn-watch {
+    @extend %btn;
+    color: $secondary-text-color;
+
+    i {
+        width: 30px;
+        height: 30px;
+        border-radius: 50px;
+        border: 1px solid $secondary-color;
+        color: $secondary-color;
+        text-align: center;
+        margin: auto;
+    }
     
 }
 
